2009-03-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Test stringObj-6.9 checks that
	* tests/stringObj.test:		Tcl_AppendStringsToObj() no longer
	crashes when operating on a pure unicode value.  [Bug 2597185]

	* generic/tclExecute.c (INST_CONCAT1):	Panic when appends overflow
	the max length of a Tcl value.  [Bug 2669109]

2009-03-18  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinFile.c (TclpObjNormalizePath):      Corrected Tcl_Obj leak.
	Thanks to Joe Mistachkin for detection and patch.  [Bug 2688184].

2009-02-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed mistaken logic in TclFSGetPathType()
	* tests/fileName.test:  that assumed (not "absolute" => "relative").
	This is a false assumption on Windows, where "volumerelative" is
	another possibility.  [Bug 2571597].

2008-02-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tcl.h (Darwin): workaround conflict between deprecated tcl
	panic macro and panic() function declaration in <mach/mach.h> header.

2009-02-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c: Added overflow protections to the
	AppendUtfToUtfRep routine to either avoid invalid arguments and
	crashes, or to replace them with controlled panics.  [Bug 2561794]

2009-02-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (SetUnicodeObj):       Corrected failure of
	Tcl_SetUnicodeObj() to panic on a shared object.  [Bug 2561488].  Also
	factored out common code to reduce duplication.

2009-01-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_SIZE): Corrected failure to limit
	memory allocation requests to the sizes that can be supported by
	Tcl's memory allocation routines.  [Bug 2494093].

2009-01-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_UALLOC):  Added missing parens
	required to get correct results out of things like
	STRING_UALLOC(num + append).  [Bug 2494093].
