@@ -1,3 +1,8 @@
+2009-03-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/fileName.test:	Tests for [Bug 2710920] to guard against
+	its appearance.
+
 2009-03-20  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c:	Test stringObj-6.9 checks that
